# MLPCG

./: .gitignore  .gitmodules  README.md  amg_test.py  amgcl.py  analysis.ipynb  cg_tests.py  code_profile.py  denoise.ipynb  linear_model.py  loss_functions.py  model.py  newmodel.py  pcg_tests.py  plot.py  preprocess.py  profile_cuda.py  ritz_vec_visualization.ipynb  sm_model.py  sm_model_3colors.py  sm_model_3d.py  sm_model_3d_py.py  svd.py  test.py  test_256.py  test_dcdm.py  test_single_frame.py  train.py  train_256.py  train_empty.py  train_one_scene.py  train_scene.py  train_single.py  user_preprocess.py  user_train_256.py  validation.py  visualization.py
.colab_ssh/: authorized_keys
configs/: PCG_AGGREGATION_JACOBI.json
cxx/: readme.md
cxx_src/: CMakeLists.txt  CMakeLists.txt.in  README.md  amg.cpp  amg.cu  ic.cpp  ic.cu  pyamgcl.cpp  pyamgcl.cu  pyamgcl_vexcl.cpp  pyic.cpp  pyic.cu  pyic_vexcl.cpp  pysolver.py  pysolverconfig.cpp  sources.cmake
cxx_src/lib/: AMGCLSolver.cpp  AMGCLSolver.h  AMGCLSolver.inl  BinaryIO.h  Definitions.h  Filesystem.h  ICSolver.h  IO.h  MPIDomain.cpp  MPIDomain.h  NoMPIAMGCLSolver.cpp  NoMPIAMGCLSolver.h  SolverConfig.cpp  SolverConfig.h  ZIP.h  library_sources.cmake
cxx_src/pyamgx/: setup.py
dcdm/: datasetcreate.py  test_all_cg.py  test_single_frame.py  train.py  view_loss.py
fluidnet/: flexiunet.py  model.py  scalesnet.py  test.py  train.py
fluidnet/lib/: GLOBAL_VARS.py  cell_type.py  dataset_load.py  load_manta_data.py  set_wall_bcs.py  test.py  velocity_divergence.py  velocity_update.py  write_rhs_and_flags.py
lib/: GLOBAL_VARS.py  benchmark.py  conjugate_gradient.py  create_dataset.py  dataset.py  datasetcreate.py  dateset.py  discrete_laplacian.py  global_clock.py  helper_functions.py  preprocess.py  read_data.py  visualization.py  write_data.py  write_log.py
src/: __train.py  create_dataset_from_ritz_vectors.py  create_ritz_vectors_from_lanczos_vectors.py  dasetcreation.py  datasetcreate.py  get_model.py  test.py  test_all_cg.py  test_osman_version.py  test_single_frame.py  train.py  train_N128.py  train_N64.py
torch_extension/: CMakeLists.txt  benchmark.py  main.cpp  main.py  setup.py  sm_block.cpp  sm_block_3d.cpp  sm_block_3d_kernel.cu  sm_block_cpu.h  sm_block_kernel.cu  sm_block_trans.cpp  sm_block_trans_3d.cpp  sm_block_trans_3d_kernel.cu  sm_block_trans_kernel.cu  sm_linear.cpp  sm_linear_3d.cpp  sm_linear_3d_kernel.cu  sm_linear_cpu.h  sm_linear_kernel.cu
